--- a/package.json
+++ b/package.json
@@ -1,85 +1,24 @@
-<<<<<<< .mine
 {
   "name": "iobroker.hs100",
-  "version": "0.0.8",
-  "description": "Connects TP-Link HS100 with ioBroker",
-  "author": "arteck <arteck@freenet.de>",
-  "engines": {
-    "node": ">=6.10"
+  "version": "0.0.10",
+  "description": "switch tp-plink hs100 and hs110 plug",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://github.com/arteck/ioBroker.hs100",
-  "keywords": [
-    "ioBroker",
-    "hs100",
-    "hs110",
-    "tplink",
-    "home automation"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/arteck/ioBroker.hs100.git"
   },
-  "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-replace": "~0.7.6",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-jscs": "~0.6.1",
-    "grunt-http": "~1.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compress": "~0.8.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-exec": "~0.4.5"
-  },
-  "bugs": {
-    "url": "https://github.com/arteck/ioBroker.hs100/issues"
-  },
-  "main": "main.js",
-  "license": "MIT",
-  "dependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
-}
-=======
-{
-  "name": "iobroker.hs100",
-  "version": "0.0.5",
-  "description": "Connects TP-Link HS100 with ioBroker",
-  "author": "arteck <arteck@freenet.de>",
-  "engines": {
-    "node": ">=6.10"
-  },
-  "homepage": "https://github.com/arteck/ioBroker.hs100",
   "keywords": [
-    "ioBroker",
     "hs100",
     "hs110",
-    "tplink",
-    "home automation"
+    "iobroker"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/arteck/ioBroker.hs100.git"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.4",
-    "grunt-replace": "~0.7.6",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-jscs": "~0.6.1",
-    "grunt-http": "~1.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compress": "~0.8.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-exec": "~0.4.5"
-  },
+  "author": "arteck",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/arteck/ioBroker.hs100/issues"
   },
-  "main": "main.js",
-  "license": "MIT",
-  "dependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+  "homepage": "https://github.com/arteck/ioBroker.hs100#readme"
 }
->>>>>>> .theirs
