--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "switch tp-plink hs100 and hs110 plug",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/arteck/ioBroker.hs100/issues"
   },
-  "homepage": "https://github.com/arteck/ioBroker.hs100#readme"
+  "homepage": "https://github.com/arteck/ioBroker.hs100#readme",
+  "devDependencies": {
+    "mocha": "^3.5.3",
+    "chai": "^4.1.2"
+  }
 }
