--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "switch tp-plink plugs and bulbs ",
   "main": "main.js",
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha"
+    "test": "node node_modules/mocha/bin/mocha --exit"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,7 @@
   },
   "homepage": "https://github.com/arteck/ioBroker.hs100#readme",
   "devDependencies": {
-    "mocha": "^3.5.3",
+    "mocha": "^4.1.0",
     "chai": "^4.1.2"
   }
 }
