--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.hs100",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "switch tp-plink plugs and bulbs ",
   "main": "main.js",
   "scripts": {
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/arteck/ioBroker.hs100#readme",
   "devDependencies": {
-    "mocha": "^3.5.3",
+    "gulp": "^3.9.1",
+    "mocha": "^4.1.0",
     "chai": "^4.1.2"
   }
 }
