--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.hs100",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "switch tp-plink plugs and bulbs ",
   "main": "main.js",
   "scripts": {
@@ -22,6 +22,16 @@
     "url": "https://github.com/arteck/ioBroker.hs100/issues"
   },
   "homepage": "https://github.com/arteck/ioBroker.hs100#readme",
+  "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "commander": "^2.11.0",
+    "lodash.defaultto": "^4.14.0",
+    "lodash.groupby": "^4.6.0",
+    "lodash.isequal": "^4.5.0",
+    "loglevel": "^1.5.1",
+    "tplink-smarthome-crypto": "^1.0.0",
+    "tplink-smarthome-api": "^0.22.0"
+  },
   "devDependencies": {
     "gulp": "^3.9.1",
     "mocha": "^4.1.0",
