--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lodash.isequal": "^4.5.0",
     "loglevel": "^1.5.1",
     "tplink-smarthome-crypto": "^1.0.0",
-    "tplink-smarthome-api": "*"
+    "tplink-smarthome-api": "^0.23.1"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
