--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "lodash.isequal": "^4.5.0",
     "loglevel": "^1.5.1",
     "tplink-smarthome-crypto": "^1.0.0",
-    "tplink-smarthome-api": "^0.23.1"
+    "tplink-smarthome-api": "^0.23.1",
+    "@iobroker/adapter-core": "^1.0.3"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
     "mocha": "^4.1.0",
-    "chai": "^4.1.2",
-    "@iobroker/adapter-core": "^1.0.3"
+    "chai": "^4.1.2"
   }
 }
