--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,20 @@ os:
   - windows
 language: node_js
 node_js:
+  - '8'
   - '10'
   - '12'
-  - 'node'
+before_install:
+  - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then CC=gcc-6; fi'
+  - 'if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then CXX=g++-6; fi'
 before_script:
   - export NPMVERSION=$(echo "$($(which npm) -v)"|cut -c1)
   - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm@5; fi'
   - npm -v
-  - npm install winston@3.2.1
-  - 'npm install https://github.com/arteck/ioBroker.hs100/tarball/master --production'
-env:
-  - CXX=g++-6
+script:
+  - 'npm run test:package'
+  - 'npm run test:unit'
+  - 'npm run test:integration'
 addons:
   apt:
     sources:
