--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,16 @@ os:
   - windows
 language: node_js
 node_js:
-  - '8'
   - '10'
   - '12'
-before_install:
-  - 'if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then CC=gcc-6; fi'
-  - 'if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then CXX=g++-6; fi'
+  - 'node'
 before_script:
   - export NPMVERSION=$(echo "$($(which npm) -v)"|cut -c1)
   - 'if [[ $NPMVERSION == 5 ]]; then npm install -g npm@5; fi'
   - npm -v
-script:
-  - 'npm run test:package'
-  - 'npm run test:unit'
-  - 'npm run test:integration'
+  - npm install winston@3.2.1  
+env:
+  - CXX=g++-6
 addons:
   apt:
     sources:
