--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 # These are supported funding model platforms
 
-custom: ['https://paypal.me/pools/c/8gWlKqAfIF']
+custom: ['https://paypal.me/ArthurRupp']
