--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "tplink-smarthome-api": "^3.3.0"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "^2.2.1",
+    "@alcalzone/release-script": "~3.4.2",
     "@iobroker/testing": "^2.4.4",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
@@ -37,11 +37,16 @@
     "axios": "^0.21.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.22.0",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "gulp": "^4.0.2",
+    "gulp-jsdoc3": "^3.0.0",
+    "gulp-replace": "^1.1.3",
     "proxyquire": "^2.1.3",
-    "sinon": "^9.0.2",
-    "sinon-chai": "^3.5.0"
+    "mocha": "^9.1.3",
+    "sinon": "^12.0.1",
+    "sinon-chai": "^3.7.0"
   },
   "main": "main.js",
   "scripts": {
