--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.hs100",
-  "version": "2.0.7",
+  "version": "2.1.0",
   "description": "switch tp-plink plugs and bulbs ",
   "author": {
     "name": "Arthur Rupp",
@@ -24,7 +24,7 @@
     "tplink-smarthome-api": "^3.3.0"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "~3.5.0",
+    "@alcalzone/release-script": "^3.5.2",
     "@iobroker/testing": "^2.5.1",
     "@types/chai": "^4.2.11",
     "@types/chai-as-promised": "^7.1.2",
@@ -39,8 +39,8 @@
     "chai-as-promised": "^7.1.1",
     "eslint": "^8.6.0",
     "gulp": "^4.0.2",
-    "proxyquire": "^2.1.3",
     "mocha": "^9.1.3",
+    "proxyquire": "^2.1.3",
     "sinon": "^12.0.1",
     "sinon-chai": "^3.7.0"
   },
