--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "axios": "^0.27.2",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.18.0",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "gulp": "^4.0.2",
-    "mocha": "^10.0.0",
-    "proxyquire": "^2.1.3",
-    "sinon": "^14.0.0",
-    "sinon-chai": "^3.7.0"
+    "gulp-jsdoc3": "^3.0.0",
+    "gulp-replace": "^1.1.3",
+    "mocha": "^10.0.0"
   },
   "main": "main.js",
   "scripts": {
