--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.0",
     "tplink-smarthome-crypto": "^4.0.0",
-    "tplink-smarthome-api": "^4.2.0"
+    "tplink-smarthome-api": "https://github.com/arteck/tplink-smarthome-api"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.5.9",
