--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.7",
     "tplink-smarthome-crypto": "^4.0.0",
-    "tplink-smarthome-api": "https://github.com/arteck/tplink-smarthome-api/tree/19c66ac4ca0bc8789b44300b29e60f2dfb89179f"
+    "tplink-smarthome-api": "^4.2.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.5.9",
