--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.hs100",
-  "version": "2.1.3",
+  "version": "2.1.5",
   "description": "switch tp-plink plugs and bulbs ",
   "author": {
     "name": "Arthur Rupp",
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^2.6.7",
-    "tplink-smarthome-crypto": "^4.0.0",
-    "tplink-smarthome-api": "^4.2.0"
+    "tplink-smarthome-api": "^4.2.0",
+    "tplink-smarthome-crypto": "^4.0.0"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^3.5.9",
