--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "tplink-smarthome-crypto": "^4.0.0"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "^3.5.9",
+    "devDependencies": {
+    "@alcalzone/release-script": "^3.6.0",
+    "@alcalzone/release-script-plugin-iobroker": "^3.6.0",
+    "@alcalzone/release-script-plugin-license": "^3.5.9",
+    "@alcalzone/release-script-plugin-manual-review": "^3.5.9",
     "@iobroker/testing": "^4.1.0",
     "@types/chai": "^4.3.4",
     "@types/chai-as-promised": "^7.1.5",
