--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iobroker.hs100",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "switch tp-plink plugs and bulbs ",
   "author": {
     "name": "Arthur Rupp",
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^3.1.3",
-    "tplink-smarthome-api": "^5.0.0",
+    "tplink-smarthome-api": "https://github.com/arteck/tplink-smarthome-api/tarball/08bcca9334c701b60d1eeb18b0ec72350aa3bf7a",
     "tplink-smarthome-crypto": "^4.0.0"
   },
   "devDependencies": {
