--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "type": "git",
     "url": "https://github.com/arteck/ioBroker.hs100.git"
   },
+  "engines": {
+    "node": ">= 18"
+  },
   "dependencies": {
-    "@iobroker/adapter-core": "^3.1.3",
+    "@iobroker/adapter-core": "^3.1.4",
     "tplink-smarthome-api": "https://github.com/arteck/tplink-smarthome-api/tarball/08bcca9334c701b60d1eeb18b0ec72350aa3bf7a",
     "tplink-smarthome-crypto": "^4.0.0"
   },
