--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
     "@alcalzone/release-script-plugin-license": "^3.7.0",
     "@alcalzone/release-script-plugin-manual-review": "^3.7.0",
+    "@iobroker/adapter-dev": "^1.4.0",
     "@iobroker/testing": "^5.0.4",
-    "@types/chai": "^5.0.1",
+    "@types/chai": "^5.2.1",
     "@types/chai-as-promised": "^8.0.2",
     "@types/gulp": "^4.0.17",
     "@types/mocha": "^10.0.10",
@@ -41,7 +42,7 @@
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^4.0.0",
     "axios": "^1.9.0",
-    "chai": "^5.1.2",
+    "chai": "^5.2.0",
     "chai-as-promised": "^8.0.1",
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.0.2",
